sumo/tests/traci/VariableRetrieval/Simulation/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 171: Unsupported variable specified
